# isle

./: CMakeLists.txt  README.md
include/isle/: gen.h  ir.h  match.h  parser.h  visitors.h
tests/: CMakeLists.txt  Makefile  basic  basic.cpp  lambda.cpp  lambda_gen.cpp  match.cpp  parser.cpp  variant.cpp
tests/input/: hello.isle  lambda.isle  lambda2.isle
